Added blog link and Google Analytics

--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
         margin: 15px;
       }
 
-      a {
+      a.img {
         text-decoration: none;
       }
 
@@ -47,6 +47,16 @@
         color: #555555;
       }
     </style>
+
+    <script>
+      (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+      (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+      m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+      })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
+
+      ga('create', 'UA-50047832-1', 'kankje.com');
+      ga('send', 'pageview');
+    </script>
   </head>
 
   <body>
@@ -56,16 +66,20 @@
         <h1>Jere Kankaanranta</h1>
         <h2>A web developer</h2>
 
-        <a href="https://linkedin.com/in/kankje">
-          <img src="img/linkedin_logo.png" alt="LinkedIn">
+        <a class="img" href="https://linkedin.com/in/kankje">
+          <img src="img/linkedin-logo.png" alt="LinkedIn">
         </a>
 
-        <a href="https://github.com/kankje">
-          <img src="img/github_logo.png" alt="GitHub">
+        <a class="img" href="https://github.com/kankje">
+          <img src="img/github-logo.png" alt="GitHub">
         </a>
 
-        <a href="https://twitter.com/kankje">
-          <img src="img/twitter_logo.png" alt="Twitter">
+        <a class="img" href="https://twitter.com/kankje">
+          <img src="img/twitter-logo.png" alt="Twitter">
+        </a>
+
+        <a href="http://blog.kankje.com/">
+          <h2>My blog</h2>
         </a>
 
       </div>
